--- a/WebAPP/Web.config
+++ b/WebAPP/Web.config
@@ -61,4 +61,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="Context" connectionString="Data Source=MURAT-PC ; Initial Catalog=TravelDb; Integrated Security = TRUE ;"
+         providerName ="system.Data.SqlClient"/>
+   
+  </connectionStrings>
 </configuration>
