--- a/WebAPP/WebAPP.csproj
+++ b/WebAPP/WebAPP.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Sınıflar\Admin.cs" />
     <Compile Include="Models\Sınıflar\Adres.cs" />
     <Compile Include="Models\Sınıflar\AnaSayfa.cs" />
