--- a/WebAPP/WebAPP.csproj
+++ b/WebAPP/WebAPP.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Models\Sınıflar\Adres.cs" />
     <Compile Include="Models\Sınıflar\AnaSayfa.cs" />
     <Compile Include="Models\Sınıflar\Blog.cs" />
+    <Compile Include="Models\Sınıflar\BlogYorum.cs" />
     <Compile Include="Models\Sınıflar\Context.cs" />
     <Compile Include="Models\Sınıflar\Hakkimizda.cs" />
     <Compile Include="Models\Sınıflar\Iletisim.cs" />
